--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             <li class="header-item">
               <a href="#contacts" class="header-link">Contacts</a>
             </li>
+
+            <li class="navigation-lang-switch">
+              <span class="navigation-lang-en active">en</span> / <span class="navigation-lang-ru">ru</span>
+           </li>
+
+
           </ul>
           <div class="header-nav-close">
             <span class="header-nav-close-line"></span>
@@ -61,12 +67,12 @@
     <main class="main">
       <section class="hero">
         <div class="hero-about">
-          <h1 class="title">Alexa Rise</h1>
-          <p class="subtitle">
+          <h1 class="title" data-i18="hero-title">Alexa Rise</h1>
+          <p class="subtitle" data-i18="hero-text">
             Save sincere emotions, romantic feelings and happy moments of life
             together with professional photographer Alexa Rise
           </p>
-          <button type="submit" class="forma-submit">Hire me</button>
+          <button type="submit" class="forma-submit" data-i18="hire">Hire me</button>
         </div>
       </section>
   <section class="skills-wrapper">
@@ -76,7 +82,7 @@
             <img class="line-left" src="./assets/img/section-title-line.png" alt="!" />
           </div>
           <div class="text-center-wrapper">
-            <h2 id="skills" class="text-center">Skills</h2>
+            <h2 id="skills" class="text-center" data-i18="skills">Skills</h2>
           </div>
           <div class="line2">
             <img class="line-right" src="./assets/img/section-title-line.png" alt="!" />
@@ -88,15 +94,15 @@
             <div class="camera11-wrapper">
               <img src="./assets/img/camera11.png" alt="!" />
             </div>
-            <p class="text-20-40">Digital photography</p>
-            <p class="text-card">High-quality photos in the studio and on the nature</p>
+            <p class="text-20-40" data-i18="skill-title-1">Digital photography</p>
+            <p class="text-card" data-i18="skill-text-1">High-quality photos in the studio and on the nature</p>
           </div>
           <div class="ckills-container">
             <div class="camera11-wrapper">
               <img src="./assets/img/video1.png" alt="!" />
             </div>
-            <p class="text-20-40">Video shooting</p>
-            <p class="text-card">Capture your moments so that they always stay with you
+            <p class="text-20-40" data-i18="skill-title-2">Video shooting</p>
+            <p class="text-card" data-i18="skill-text-2">Capture your moments so that they always stay with you
             <p>
           </div>
 
@@ -104,8 +110,8 @@
             <div class="camera11-wrapper">
               <img src="./assets/img/image1.png" alt="!" />
             </div>
-            <p class="text-20-40">Retouch</p>
-            <p class="text-card">I strive to make photography surpass reality</p>
+            <p class="text-20-40" data-i18="skill-title-3">Retouch</p>
+            <p class="text-card" data-i18="skill-text-3">I strive to make photography surpass reality</p>
           </div>
 
 
@@ -113,8 +119,8 @@
             <div class="camera11-wrapper">
               <img src="./assets/img/mic1.png" alt="!" />
             </div>
-            <p class="text-20-40">Audio</p>
-            <p class="text-card">Professional sounds recording for video, advertising, portfolio</p>
+            <p class="text-20-40" data-i18="skill-title-4">Audio</p>
+            <p class="text-card" data-i18="skill-text-4">Professional sounds recording for video, advertising, portfolio</p>
           </div>
         </div>
       </div>
@@ -129,18 +135,18 @@
           <img class="line-left" src="./assets/img/section-title-line.png" alt="!" />
         </div>
         <div class="text-center-wrapper">
-          <h2 id="portfolio" class="text-center">Portfolio</h2>
+          <h2 id="portfolio" class="text-center" data-i18="portfolio">Portfolio</h2>
         </div>
         <div class="line2">
           <img class="line-right" src="./assets/img/section-title-line.png" alt="!" />
         </div>
       </div>
       <!--заголовок секции end-->
-      <div class="button4">
-        <button type="submit" class="forma-submit4">Winter</button>
-        <button type="submit" class="forma-submit4">Spring</button>
-        <button type="submit" class="forma-submit4">Summer</button>
-        <button type="submit" class="forma-submit3">Autumn</button>
+      <div class="portfolio-btns">
+        <button type="button" class="portfolio-btn winter main-btn" data-i18="winter" data-season="winter">Winter</button>
+        <button type="button" class="portfolio-btn spring main-btn"  data-i18="spring" data-season="spring">Spring</button>
+        <button type="button" class="portfolio-btn summer main-btn" data-i18="summer" data-season="summer">Summer </button>
+        <button type="button" class="portfolio-btn autumn main-btn" data-i18="autumn"data-season="autumn">Autumn</button>
       </div>
       <div class="sea-photo">
 
@@ -183,7 +189,7 @@
           <img class="line-left" src="./assets/img/section-title-line.png" alt="!" />
         </div>
         <div class="text-center-wrapper">
-          <h2 class="text-center">Video</h2>
+          <h2 class="text-center" data-i18="video">Video</h2>
         </div>
         <div class="line2">
           <img class="line-right" src="./assets/img/section-title-line.png" alt="!" />
@@ -208,7 +214,7 @@
           <img class="line-left" src="./assets/img/section-title-line.png" alt="!" />
         </div>
         <div class="text-center-wrapper">
-          <h2 class="text-center">Price</h2>
+          <h2 class="text-center" data-i18="price">Price</h2>
         </div>
         <div class="line2">
           <img class="line-right" src="./assets/img/section-title-line.png" alt="!" />
@@ -220,7 +226,7 @@
         <div class="price-form">
           <p class="price-form-title">Standard</p>
           <p class="price-form-price">500 &#36;</p>
-          <p class="price-form-text">One location <br />120 photos in color <br />12 photos in retouch <br />Readiness
+          <p class="price-form-text" data-i18="price-description-1-span-1">One location <br />120 photos in color <br />12 photos in retouch <br />Readiness
             2-3 weeks <br />Make up, visage</p>
           <div class="forma-submit-wrapper">
             <button type="submit" class="forma-submit-price">Order shooting</button>
@@ -229,7 +235,7 @@
         <div class="price-form">
           <p class="price-form-title">Premium</p>
           <p class="price-form-price">700 &#36;</p>
-          <p class="price-form-text">One or two locations <br />200 photos in color <br />20 photos in retouch
+          <p class="price-form-text" data-i18="price-description-2-span-1">One or two locations <br />200 photos in color <br />20 photos in retouch
             <br />Readiness 1-2 weeks <br />Make up, visage</p>
           <div class="forma-submit-wrapper">
             <button type="submit" class="forma-submit-price">Order shooting</button>
@@ -239,15 +245,15 @@
           <p class="price-form-title">Gold</p>
           <p class="price-form-price">1000 &#36;</p>
           <ul>
-            <li class="price-form-text">Three locations or more</li>
-            <li class="price-form-text">300 photos in color</li>
-            <li class="price-form-text">50 photos in retouch</li>
-            <li class="price-form-text">Readiness 1 weeks</li>
-            <li class="price-form-text">Make up, visage, hairstyle</li>
+            <li class="price-form-text" data-i18="price-description-3-span-1">Three locations or more</li>
+            <li class="price-form-text" data-i18="price-description-3-span-2">300 photos in color</li>
+            <li class="price-form-text" data-i18="price-description-3-span-3">50 photos in retouch</li>
+            <li class="price-form-text" data-i18="price-description-3-span-4">Readiness 1 weeks</li>
+            <li class="price-form-text" data-i18="price-description-3-span-5">Make up, visage, hairstyle</li>
 
           </ul>
           <div class="forma-submit-wrapper">
-            <button type="submit" class="forma-submit-price">Order shooting</button>
+            <button type="submit" class="forma-submit-price" data-i18="order">Order shooting</button>
           </div>
         </div>
       </div>
@@ -262,7 +268,7 @@
       <div class="requisites">
 
         <div class="error">
-          <p class="error-text">Contact me</p>
+          <p class="error-text" data-i18="contact-me">Contact me</p>
         </div>
 
 
